<resources>
    <string name="app_name">HeadHunters</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="nombreAPP">HEADHUNTERS</string>

    <string name="menu_home">Ideas Destacadas</string>
    <string name="menu_gallery">Publicar</string>
    <string name="menu_idea">Idea</string>
    <string name="menu_login">LogIn</string>
    <string name="menu_signin">SignIn</string>
    <string name="menu_explorar">Explorar</string>

    <string name="prompt_email">Correo</string>
    <string name="prompt_password">Contrasena</string>
    <string name="prompt_nombres">Nombres</string>
    <string name="prompt_apellidos">Apellidos</string>
    <string name="action_log_in">Loguearse</string>
    <string name="action_sign_in">Registrarse</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">No es un usuario valido</string>
    <string name="invalid_password">La contraseña debe ser de minimo 5 caracteres</string>
    <string name="login_failed">"Error al Loguearse"</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="menu_explore">Explorar</string>
    <string name="idea_card_desc_text">test description</string>
    <string name="ver_mas_text">VER MÁS</string>
    <string name="idea_img_description">test description</string>

    <!-- Publicar idea -->
    <string name="publish_titulo">Publica tu idea/proyecto</string>
    <string name="publish_seleccionar_categoria">Selecciona una categoría para clasificar tu proyecto:</string>
    <string name="publish_dar_nombre">Dale un nombre para identificarla:</string>
    <string name="publish_describir">Descríbela:</string>
    <string name="publish_subir_imagen">¿Tienes alguna imagen o logo que represente tu idea? ¡Súbela!:</string>
    <string name="publish_que_buscas">¿Qué estas buscando para tu proyecto?</string>
    <string name="publish_donaciones">Pequeñas Donaciones</string>
    <string name="publish_inversiones">Grandes Inversiones</string>
    <string name="publish_expertos">Expertos o Personal</string>
    <string name="publish_incentivos">¿Qué incentivos le quieres dar a las personas que donen?</string>
    <string name="publish_premium">Versión Premium/Especial del Producto</string>
    <string name="publish_descuentos">Descuentos en el Producto o Servicio Final</string>
    <string name="publish_adqtemprana">Adquisición Temprana del Producto</string>
    <string name="publish_seleccionar_areas">¿En que áreas necesitas expertos o personal?</string>
    <string name="publish_derecho">Derecho y Leyes</string>
    <string name="publish_economia">Economía y Finanzas</string>
    <string name="publish_ingenieria">Ingeniería</string>
    <string name="publish_manufacura">Manufactura</string>
    <string name="publish_monto_limite">Define un monto límite:</string>
    <string name="publish_fecha_limite">Define una fecha límite para reunir lo que necesitas:</string>
    <string name="publish_boton">Haz volar tu idea</string>

    <string name="INTERACCIONES">Interacciones</string>

    <string name="COMENTARIOS">COMENTARIOS</string>
    <string name="DONACIONES">DONACIONES</string>
    <string name="INVERSIONES">INVERSIONES</string>


    <string name="INTERACTUAR">Interactuar</string>

    <string name="COMENTAR">COMENTAR</string>
    <string name="DONAR">DONAR</string>
    <string name="INVERTIR">INVERTIR</string>


    <string-array name="categorias_array">
        <item>Agro</item>
        <item>Cultura</item>
        <item>Educación</item>
        <item>Entretenimiento</item>
        <item>Gastronomia</item>
        <item>Moda</item>
        <item>Tecnología</item>
    </string-array>

    <string name="preference_file_key">equipo.rocket.headhunters.PREFERENCE_FILE_KEY</string>

    <string name="low_investment">Baja inversión</string>
    <string name="mid_investment">Media inversión</string>
    <string name="high_investment">Alta inversión</string>
    <string name="cancel">Cancel</string>
    <string name="ok">Ok</string>
</resources>