<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@mipmap/ic_stacked_bar_chart"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@mipmap/ic_publish"
            android:title="@string/menu_gallery" />
        <item
            android:id="@+id/nav_idea"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_idea" />

        <item
            android:id="@+id/nav_login"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_login" />

        <item
            android:id="@+id/nav_signin"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_signin" />

        <item
            android:id="@+id/nav_explorar"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_explorar" />
    </group>
</menu>