<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="equipo.rocket.headhunters.ui.destacadas.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_explore"
        android:name="equipo.rocket.headhunters.ui.explore.ExploreFragment"
        android:label="@string/menu_explore"
        tools:layout="@layout/fragment_explore" />

    <fragment
        android:id="@+id/nav_signin"
        android:name="equipo.rocket.headhunters.ui.SignIn.SignInFragment"
        android:label="@string/menu_signin"
        tools:layout="@layout/fragment_signin" />

    <fragment
        android:id="@+id/nav_idea"
        android:name="equipo.rocket.headhunters.ui.idea.IdeaFragment"
        android:label="@string/menu_idea"
        tools:layout="@layout/fragment_idea" />

    <fragment
        android:id="@+id/nav_login"
        android:name="equipo.rocket.headhunters.ui.Login.LoginFragment"
        android:label="@string/menu_login"
        tools:layout="@layout/fragment_login" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="equipo.rocket.headhunters.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />
</navigation>